--- a/foodtasker/foodtaskerapp/templates/home.html
+++ b/foodtasker/foodtaskerapp/templates/home.html
@@ -1,9 +1,19 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
+
+    <!-- BOOTSTRAP CSS-->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+
+    <!-- BOOTSTRAP JS -->
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </head>
   <body>
     <h1>SUCCESSFUL!</h1>
