--- a/foodtasker/foodtaskerapp/templates/restaurant/sign_up.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/sign_up.html
@@ -16,7 +16,7 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </head>
   <body>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
       {% csrf_token %} {{ user_form }} {{ restaurant_form }}
       <button type="submit">Sign Up</button>
     </form>
