--- a/foodtasker/foodtaskerapp/templates/base.html
+++ b/foodtasker/foodtaskerapp/templates/base.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>{% block title %}{% endblock %}</title>
 
     <!-- BOOTSTRAP CSS-->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
@@ -14,9 +14,12 @@
 
     <!-- BOOTSTRAP JS -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+    <!-- JQUERY -->
+    <script src="{% static 'js/jquery.min.js' %}"></script>
   </head>
   <body>
-    <h1>RESTAURANT PAGE</h1>
-    <p><a href="{% url 'restaurant-sign-out' %}">Log Out</a></p>
+    <h1>{% block page %}{% endblock %}</h1>
+    {%block sidebar%} {%endblock%}
   </body>
 </html>
