--- a/foodtasker/foodtaskerapp/templates/restaurant/sign_in.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/sign_in.html
@@ -1,24 +1,17 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign In Page</title>
+{% extends 'base_signup.html' %}
+{% load bootstrap4 %}
 
-    <!-- BOOTSTRAP CSS-->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+{% block title %}Sign In{% endblock %}
+{% block header %}Restaurant - Sign In{% endblock %}
 
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
-    <!-- BOOTSTRAP JS -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </head>
-  <body>
-    <form method="POST">
-      {% csrf_token %} {{ form }}
-      <button type="submit">Sign In</button>
-    </form>
-  </body>
-</html>
+{% block content %}
+
+  <form method="POST" class="d-flex flex-column p-5">
+    {% csrf_token %} 
+    {% bootstrap_form form %}
+    <button type="submit" class="btn btn-pink mt-4 text-uppercase">Sign In</button>
+  </form>
+  <a href="{%url 'restaurant-sign-up'%}">Become a Restaurant</a>
+
+{% endblock %}
