--- a/foodtasker/foodtaskerapp/templates/restaurant/sign_up.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/sign_up.html
@@ -1,24 +1,28 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign Up Page</title>
+{% extends 'base_signup.html' %}
+{% load bootstrap4 %}
 
-    <!-- BOOTSTRAP CSS-->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" />
+{% block title %}
+  Sign Up
+{% endblock %}
 
-    <!-- CUSTOM CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+{% block header %}
+  Restaurant - Sign Up
+{% endblock %}
 
-    <!-- BOOTSTRAP JS -->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-  </head>
-  <body>
-    <form method="POST" enctype="multipart/form-data">
-      {% csrf_token %} {{ user_form }} {{ restaurant_form }}
-      <button type="submit">Sign Up</button>
-    </form>
-  </body>
-</html>
+{% block content %}
+  <form method="POST" enctype="multipart/form-data" class="d-flex flex-wrap">
+    {% csrf_token %} 
+    <div class="flex-column p-3 col-lg-6 col-md-6">
+      {% bootstrap_form user_form %} 
+    </div>
+    <div class="flex-column p-3 col-lg-6 col-md-6">
+      {% bootstrap_form restaurant_form %}
+    </div>
+    <div class="column w-100">
+      <button type="submit" class="btn btn-pink w-100 text-uppercase">Sign Up</button>
+    </div>
+  </form>
+  <a href="{%url 'restaurant-sign-in'%}">Already have an account?</a>
+{% endblock %}
+
+
