--- a/foodtasker/foodtaskerapp/static/css/style.css
+++ b/foodtasker/foodtaskerapp/static/css/style.css
@@ -1,15 +1,26 @@
+/* CUSTOM VARIABLES */
 :root {
     --main-bg-blue: #3f3f63;
     --main-btn-pink: #ee5462;
     --main-txt-color: #ffffff;
 
     --hover-btn-pink: #da4f5d;
-  }
+}
 
+/* GLOBAL CSS */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;   
+}
+
+/* BACKGROUND */
 .bg-blue{
     background-color: var(--main-bg-blue);
 }
 
+
+/* BUTTONS */
 .btn-pink{
     color: var(--main-txt-color);
     background-color: var(--main-btn-pink);
@@ -20,4 +31,15 @@
 .btn-pink:focus{
     color: var(--main-txt-color);
     background-color: var(--hover-btn-pink);
+}
+
+
+/* SIDEBAR */
+.sidebar {
+    background-color: var(--main-bg-blue);
+    color: var(--main-txt-color);
+    min-height: 100vh;
+    max-height: 100%;
+    height: 100%;
+    overflow: auto;
 }
