--- a/foodtasker/foodtaskerapp/templates/restaurant/base.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/base.html
@@ -1,17 +1,21 @@
 {%extends 'base.html'%} 
 
 {%block title%} 
-  Restaurant Home 
+  Restaurant Home Page
 {%endblock%} 
 
 {%block sidebar%} 
-  Restaurant, Hi {{request.user}}
-  <hr />
+  <div class="text-center">
+    <img class="rounded-circle" src="{{ MEDIA_URL }}{{ request.user.restaurant.logo }}" width="70" height="70">
+    <h4>Hi, {{ request.user.get_full_name }}</h4>
+    <h5>{{ request.user.restaurant.name }}</h5>
+  </div>
+
   <a href="{%url 'restaurant-account' %}">Account</a>
-  -
+  |
   <a href="{%url 'restaurant-meal' %}">Meal</a>
-  -
+  |
   <a href="{%url 'restaurant-order' %}">Order</a>
-  -
+  |
   <a href="{%url 'restaurant-report' %}">Report</a>
 {%endblock%}
