restaurant add account page

--- a/foodtasker/foodtaskerapp/templates/restaurant/order.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/order.html
@@ -1,2 +1,11 @@
-{%extends 'restaurant/base.html'%} {%block title%} Restaurant Order {%endblock%}
-{%block page%} Restaurant Order Page {%endblock%}
+{%extends 'restaurant/base.html'%} 
+
+
+{%block title%} 
+    Restaurant Order 
+{%endblock%}
+
+
+{%block page%} 
+    
+{%endblock%}
