--- a/foodtasker/foodtaskerapp/static/css/style.css
+++ b/foodtasker/foodtaskerapp/static/css/style.css
@@ -3,6 +3,9 @@
     --main-bg-blue: #3f3f63;
     --main-btn-pink: #ee5462;
     --main-txt-color: #ffffff;
+    --main-bg-logo: #383957;
+    --main-h4-color: #e0deeb;
+    --main-h5-color: #b6b4c1;
 
     --hover-btn-pink: #da4f5d;
 }
@@ -34,12 +37,86 @@
 }
 
 
-/* SIDEBAR */
+/* SIDEBAR - HEADER */
 .sidebar {
     background-color: var(--main-bg-blue);
     color: var(--main-txt-color);
-    min-height: 100vh;
-    max-height: 100%;
-    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 0;
+    height: 100vh;
     overflow: auto;
+}
+
+.sidebar > div:first-child{
+    padding: 30px 10px;
+    font-weight: bold;
+    font-size: 15px;
+    background: var(--main-bg-logo);
+}
+
+.sidebar > div:first-child h4{
+    color: var(--main-h4-color);
+}
+
+.sidebar > div:first-child h5{
+    color: var(--main-h5-color);
+}
+
+/* SIDEBAR - LIST */
+.sidebar .list-group{
+    padding: 0;
+    background-color: var(--main-bg-blue);
+}
+
+.sidebar .list-group span {
+    color: var(--main-h5-color);
+    display: block;
+    margin-top: 20px;
+    padding: 20px 30px;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.sidebar .list-group .list-group-item,
+.sidebar .list-group .list-group-item:focus{
+    background: var(--main-bg-blue);
+    color: var(--main-h5-color);
+    border: 0;
+    padding-left: 60px;
+    padding-right: 30px;
+}
+
+.sidebar .list-group .list-group-item:active,
+.sidebar .list-group .list-group-item:hover{
+    background-color: var(--main-bg-logo);
+    color: var(--main-h4-color);   
+}
+
+.sidebar .list-group .list-group-item:first-child{
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+
+}
+
+.sidebar .list-group .list-group-item .badge,
+.sidebar .list-group .list-group-item.active .badge{
+    background-color: var(--main-btn-pink);
+    color: var(--main-h4-color);
+}
+
+/* SIDEBAR - LOGOUT */
+.sidebar > div:last-child{
+    padding: 30px;
+}
+
+.sidebar > div:last-child .btn {
+    width: 100%;
+}
+
+
+/* CONTENT */
+.content{
+    padding: 0 40px;
 }
