--- a/foodtasker/foodtaskerapp/templates/restaurant/account.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/account.html
@@ -1,9 +1,26 @@
 {%extends 'restaurant/base.html'%} 
+{% load bootstrap4 %}
 
 {%block title%} 
     Restaurant Account 
 {%endblock%}
 
 {%block page%} 
-    Restaurant Account Page 
+    <div class="offset-lg-2 col-lg-8">
+        <div class="card">
+            <div class="card-header bg-blue">
+                <h4 class="card-title text-center text-white">
+                    Account
+                </h4>
+            </div>
+            <div class="card-body">
+                <form enctype="multipart/form-data" method="post">
+                    {% csrf_token %}
+                    {% bootstrap_form user_form %}
+                    {% bootstrap_form restaurant_form %}
+                    <button type="submit" class="btn btn-pink">Update</button>
+                </form>
+            </div>
+        </div>
+    </div>
 {%endblock%}
