--- a/foodtasker/foodtaskerapp/templates/base.html
+++ b/foodtasker/foodtaskerapp/templates/base.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row">
+      <div class="row offset-lg-2 vh-100 align-items-center justify-content-center">
         <div class="col-lg-2 col-md-2 col-sm-2 sidebar">
           {%block sidebar%} {%endblock%}
         </div>
