--- a/foodtasker/foodtaskerapp/templates/base.html
+++ b/foodtasker/foodtaskerapp/templates/base.html
@@ -25,7 +25,7 @@
         <div class="col-lg-2 col-md-2 col-sm-2 sidebar">
           {%block sidebar%} {%endblock%}
         </div>
-        <div class="offset-lg-2 col-lg-10 col-md-10 col-sm-10">
+        <div class="col-lg-10 col-md-10 col-sm-10">
           {% block page %}{% endblock %}
         </div>
       </div>
