--- a/foodtasker/foodtaskerapp/templates/restaurant/edit_meal.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/edit_meal.html
@@ -10,14 +10,14 @@
         <div class="card">
             <div class="card-header bg-blue">
                 <h4 class="card-title text-center text-white">
-                    Add Meal
+                    Edit Meal
                 </h4>
             </div>
             <div class="card-body">
                 <form enctype="multipart/form-data" method="post">
                     {% csrf_token %}
-                    {% bootstrap_form addMeal_form %}
-                    <button type="submit" class="btn btn-pink">Add</button>
+                    {% bootstrap_form editMeal_form %}
+                    <button type="submit" class="btn btn-pink">Update</button>
                 </form>
             </div>
         </div>
