--- a/foodtasker/foodtaskerapp/templates/restaurant/meal.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/meal.html
@@ -5,6 +5,36 @@
 {%endblock%}
 
 {%block page%} 
-    <h3>Restaurant Meal Page</h3> 
-    <a href="{% url 'restaurant-add-meal' %}" class="btn btn-pink">Add Meal</a>
+    <div class="card">
+        <div class="card-header bg-blue">
+            <h4 class="card-title text-center text-white">Meals</h4>
+        </div>
+        <div class="card-body">
+            <div class="text-right">
+                <a href="{% url 'restaurant-add-meal' %}" class="btn btn-pink">Add Meal</a>
+            </div>
+        </div>
+        <table class="table table-bordered table-striped table-hover">
+            <thead>
+                <tr class="bg-secondary text-white font-weight-bold">
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <th class="text-center">Image</th>
+                </tr>
+            </thead>
+            <tbody>
+               {% for meal in meals %}
+                    <tr>
+                        <td scope="row">{{ meal.id }}</td>
+                        <td><a href="{% url 'restaurant-edit-meal' meal.id %}">{{ meal.name }}</a></td>
+                        <td>{{ meal.short_description }}</td>
+                        <td>{{ meal.price }}</td>
+                        <td class="text-center"><img src="{{ MEDIA_URL}}{{ meal.image }}" class="rounded-circle" width="50" height="50"></td>
+                    </tr>
+               {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {%endblock%}
