--- a/foodtasker/foodtaskerapp/static/css/style.css
+++ b/foodtasker/foodtaskerapp/static/css/style.css
@@ -92,7 +92,7 @@
     padding-right: 30px;
 }
 
-.sidebar .list-group .list-group-item:active,
+.sidebar .list-group .list-group-item.active,
 .sidebar .list-group .list-group-item:hover{
     background-color: var(--main-bg-logo);
     color: var(--main-h4-color);   
@@ -101,7 +101,6 @@
 .sidebar .list-group .list-group-item:first-child{
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-
 }
 
 .sidebar .list-group .list-group-item .badge,
