--- a/foodtasker/foodtaskerapp/templates/restaurant/order.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/order.html
@@ -7,5 +7,66 @@
 
 
 {%block page%} 
-    
+    <div class="card">
+        <div class="card-header bg-blue">
+            <h4 class="card-title text-center text-white">Orders</h4>
+        </div>
+        <div class="card-body"> 
+            <table class="table table-bordered table-striped table-hover">
+                <thead>
+                    <tr class="bg-secondary text-white font-weight-bold">
+                        <th>ID</th>
+                        <th>Order Details</th>
+                        <th>Customer</th>
+                        <th>Driver</th>
+                        <th>Total</th>
+                        <th>Status</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for order in orders %}
+                        <tr>
+                            <td scope="row">{{ order.id }}</td>
+                            <td>    
+                                {% for od in order.order_details.all %}
+                                    {{od.meal.name}} {{od.meal.price}} * {{od.quantity}} = ${{od.sub_total}}
+                                {% endfor %}
+                            </td>
+                            <td>{{ order.customer }}</td>
+                            <td>{{ order.driver }}</td>
+                            <td>{{ order.total }}</td>
+                            <td>{{ order.get_status_display }}</td>
+                            <td>
+                                {%if order.status == 1%}
+                                    <form method="POST">
+                                        {% csrf_token %}
+                                        <input name="id" value="{{order.id}}" hidden>
+                                        <button class="btn btn-success">Ready</button>
+                                    </form>
+                                {%endif%}
+                                {% if order.status == 2%}
+                                    <form method="POST">
+                                        {% csrf_token %}
+                                        <input name="id" value="{{order.id}}" hidden>
+                                        <button class="btn btn-success">On The Way</button>
+                                    </form>
+                                {%endif%}
+                                {% if order.status == 3%}   
+                                    <form method="POST">
+                                        {% csrf_token %}
+                                        <input name="id" value="{{order.id}}" hidden>
+                                        <button class="btn btn-success">Delivered</button>
+                                    </form>
+                                {%endif%}
+                                {%if order.status == 4%}   
+                                    Already Delivered
+                                {%endif%}
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+         </div>
+    </div>
 {%endblock%}
