--- a/foodtasker/foodtaskerapp/templates/base.html
+++ b/foodtasker/foodtaskerapp/templates/base.html
@@ -18,6 +18,7 @@
     <!-- BOOTSTRAP JS -->
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     
+    {% block script %}{%endblock%}
   </head>
   <body>
     <div class="container-fluid">
