--- a/foodtasker/foodtaskerapp/templates/restaurant/base.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/base.html
@@ -4,6 +4,27 @@
   Restaurant Home Page
 {%endblock%} 
 
+{%block script%}
+  <script>
+    $(document).ready(function(){
+      var now = new Date();
+      setInterval(function(){
+        $.ajax({
+          url: '/api/restaurant/order/notification/' + now.toISOString() + '/',
+          method: 'GET',
+          success: function(data){
+            if (data['notification'] === 0){
+              $('.badge').text('');
+            } else {
+              $('.badge').text(data['notification']);
+            }
+          }
+        })
+      }, 3000)
+    })
+  </script>
+{%endblock%}
+
 {%block sidebar%} 
 
   {% url 'restaurant-order' as restaurant_order_url %}
@@ -20,7 +41,7 @@
   <div class="list-group">
     <span class="text-uppercase">Dashboard</span>
     
-    <a href="{%url 'restaurant-order' %}" class="list-group-item {% if request.path == restaurant_order_url %}active{% endif %}">Orders</a>
+    <a href="{%url 'restaurant-order' %}" class="list-group-item {% if request.path == restaurant_order_url %}active{% endif %}">Orders <span class="badge"></span></a>
     <a href="{%url 'restaurant-meal' %}" class="list-group-item {% if request.path == restaurant_meal_url %}active{% endif %}">Meals</a>
     <a href="{%url 'restaurant-report' %}" class="list-group-item {% if request.path == restaurant_report_url %}active{% endif %}">Reports</a>
 
