--- a/foodtasker/foodtaskerapp/templates/restaurant/order.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/order.html
@@ -35,7 +35,7 @@
                             </td>
                             <td>{{ order.customer }}</td>
                             <td>{{ order.driver }}</td>
-                            <td>{{ order.total }}</td>
+                            <td>${{ order.total }}</td>
                             <td>{{ order.get_status_display }}</td>
                             <td>
                                 {%if order.status == 1%}
