--- a/foodtasker/foodtaskerapp/templates/restaurant/order.html
+++ b/foodtasker/foodtaskerapp/templates/restaurant/order.html
@@ -45,7 +45,7 @@
                                         <button class="btn btn-success">Ready</button>
                                     </form>
                                 {%endif%}
-                                {% if order.status == 2%}
+                                <!-- {% if order.status == 2%}
                                     <form method="POST">
                                         {% csrf_token %}
                                         <input name="id" value="{{order.id}}" hidden>
@@ -58,7 +58,7 @@
                                         <input name="id" value="{{order.id}}" hidden>
                                         <button class="btn btn-success">Delivered</button>
                                     </form>
-                                {%endif%}
+                                {%endif%} -->
                                 {%if order.status == 4%}   
                                     Already Delivered
                                 {%endif%}
